# zytlog

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  docker-compose.yml
backend/: .env.example  Dockerfile  alembic.ini  main.py  pyproject.toml  requirements.txt
backend/api/: deps.py
backend/core/: config.py
backend/db/: base.py  session.py
backend/migrations/: README.md  env.py
backend/models/: __init__.py  absence.py  daily_time_account.py  employee.py  enums.py  holiday.py  holiday_set.py  non_working_period.py  non_working_period_set.py  tenant.py  time_stamp_event.py  user.py  working_time_model.py
backend/repositories/: README.md  __init__.py  absence_repository.py  base.py  employee_repository.py  holiday_repository.py  holiday_set_repository.py  non_working_period_set_repository.py  system_user_admin_repository.py  tenant_admin_repository.py  tenant_repository.py  time_stamp_event_repository.py  user_repository.py  working_time_model_repository.py
backend/schemas/: __init__.py  absence.py  auth.py  common.py  employee.py  holiday.py  holiday_set.py  non_working_period_set.py  openholidays.py  system_user_admin.py  tenant.py  tenant_admin.py  time_tracking.py  user.py  working_time_model.py
backend/scripts/: seed_demo.py
backend/services/: README.md  __init__.py  absence_service.py  calendar_service.py  daily_account_service.py  employee_service.py  export_service.py  holiday_service.py  holiday_set_service.py  non_working_period_set_service.py  openholidays_import_service.py  openholidays_service.py  reporting_service.py  (+5 more)
(+133 files in other folders)
