[project]
name = "zytlog-backend"
version = "0.1.0"
description = "Backend foundation for Zytlog"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.116.0",
  "uvicorn[standard]>=0.35.0",
  "sqlalchemy>=2.0.0",
  "psycopg[binary]>=3.2.0",
  "alembic>=1.16.0",
  "pydantic>=2.11.0",
  "pydantic-settings>=2.10.0",
  "PyJWT[crypto]>=2.10.0",
  "pytest>=8.3.0",
]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
pythonpath = ["."]
